Fix page width on mobile

--- a/practical-work10/task2/style.css
+++ b/practical-work10/task2/style.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  max-width: 512px;
+  width: 512px;
   margin-block: unset;
   margin-inline: auto;
   padding: 8px;
